manifests/cic-gke.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    app: cic-k8s-ingress-controller
spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.1.1"
        args:
          - --ingress-classes
            citrix-adc-vpx
          - --feature-node-watch
            true
        imagePullPolicy: Always
